--- a/_posts/2015-07-29-MATSim2GS.markdown
+++ b/_posts/2015-07-29-MATSim2GS.markdown
@@ -1,21 +1,24 @@
 ---
-layout: post
+layout: image-post
 title:  "MATSim2GS"
 date:   2015-07-29 14:40:28
 categories: java MATSim
+image: /images/matsim2gs/zurich.png
+download-section: true
+repository-link: https://github.com/Faylixe/matsim2gs
 ---
+
+<br/>
 
 MATSim2GS is a Java library that offers an interface between [MATSim](http:/:www.matsim.org)
 network data structure and [GraphStream](http://graphstream-project.org/) required structure.
-To use it just initialize a **NetworkGraphAdapter** object and use it like any other [GraphStream](http://graphstream-project.org/) graph structure :
+To use it just initialize a **NetworkGraphAdapter** object and use it like any other
+[GraphStream](http://graphstream-project.org/) graph structure :
 
-{% highlight java %}
-final Network network = ...;
-final NetworkGraphAdapter adapter = new NetworkGraphAdapter(network);
-adapter.setAttribute("ui.stylesheet", "node {size : 2px;}");
-adapter.display();
-{% endhighlight %}
+<br/>
+
+<script src="https://gist.github.com/Faylixe/2ab9a9f33d954084637a.js"></script>
+
+<br/>
 
 Following image shows usage of the library over Zurich city urban network.
-
-<a class="fancybox" href="/download/matsim2gs/zurich.png"><img src="/download/matsim2gs/zurich.png" class="img-responsive img-thumbnail" style="max-width: 300px;" /></a>
