--- a/_posts/2015-07-29-MATSim2GS.md
+++ b/_posts/2015-07-29-MATSim2GS.md
@@ -2,7 +2,7 @@
 layout: image-post
 title:  "MATSim2GS"
 date:   2015-07-29 14:40:28
-categories: java MATSim
+tags: [java, matsim, graph]
 image: /images/matsim2gs/zurich.png
 download-section: true
 repository-link: https://github.com/Faylixe/matsim2gs
