Updates social integration

--- a/_posts/2015-07-29-MATSim2GS.md
+++ b/_posts/2015-07-29-MATSim2GS.md
@@ -6,6 +6,7 @@ tags: [java, matsim, graph]
 image: /images/matsim2gs/zurich.png
 download-section: true
 repository-link: https://github.com/Faylixe/matsim2gs
+tweet: "MATSim2GS, a #java library for rendering #matsim network"
 ---
 
 <br/>
