Updates Marklet post

--- a/_posts/2016-01-11-marklet.md
+++ b/_posts/2016-01-11-marklet.md
@@ -5,7 +5,7 @@ date: 2016-01-11 15:12:00
 tags: [java, doclet, javadoc, markdown]
 download-section: true
 repository-link: https://github.com/Faylixe/marklet
-tweet: "Custom #java #doclet that generates #markdown javadoc."
+tweet: "Custom #java doclet that generates #markdown javadoc."
 ---
 
 <br>
@@ -15,4 +15,4 @@ when project are too small either and the whole generated pages are too noisy wh
 This is how the idea of [Marklet](https://github.com/Faylixe/marklet) is born, a custom **doclet** that generates a
 javadoc using markdown format, which can be then directly be pushed to your code repository on [GitHub](https://github.com)
 and be explored easily. Another great thing about such generated content format, is that your javadoc weight on disk is smaller
-and faster to be generated.
+and faster to be generated. Instruction  about how to use it, and samples are available on the following repository link.
