--- a/_posts/2016-01-11-marklet.md
+++ b/_posts/2016-01-11-marklet.md
@@ -10,9 +10,8 @@ tweet: "Custom #java doclet that generates #markdown javadoc."
 
 <br>
 
-I don't like the standard javadoc rendering. When projects are too big, package and classes index are useless,
-when project are too small either and the whole generated pages are too noisy when you don't have that much content.
-This is how the idea of [Marklet](https://github.com/Faylixe/marklet) is born, a custom **doclet** that generates a
-javadoc using markdown format, which can be then directly be pushed to your code repository on [GitHub](https://github.com)
-and be explored easily. Another great thing about such generated content format, is that your javadoc weight on disk is smaller
-and faster to be generated. Usage and samples are available on the following repository link.
+[Marklet](https://github.com/Faylixe/marklet) is a custom **doclet** that generates a
+javadoc using markdown format, which can be then directly be pushed to your code repository
+on [GitHub](https://github.com) and be explored easily. Another great thing about such
+generated content format, is that your javadoc weight on disk is smaller and faster to be
+generated. Usage and samples are available on the following repository link.
