Updates Marklet post

--- a/_posts/2016-01-11-marklet.md
+++ b/_posts/2016-01-11-marklet.md
@@ -10,8 +10,10 @@ tweet: "Custom #java doclet that generates #markdown javadoc."
 
 <br>
 
-[Marklet](https://github.com/Faylixe/marklet) is a custom **doclet** that generates a
-javadoc using markdown format, which can be then directly be pushed to your code repository
-on [GitHub](https://github.com) and be explored easily. Another great thing about such
-generated content format, is that your javadoc weight on disk is smaller and faster to be
-generated. Usage and samples are available on the following repository link.
+[Marklet](https://github.com/Faylixe/marklet) is a custom **doclet** that
+generates a javadoc using markdown format, which can be then directly be pushed
+to your code repository on [GitHub](https://github.com) and be explored easily.
+Another great thing about such generated content format, is that your javadoc
+weight on disk is smaller and the generation process is faster than the standard
+doclet implementation. Usage and samples are available on the following
+repository link.
