--- a/_posts/2016-01-11-marklet.md
+++ b/_posts/2016-01-11-marklet.md
@@ -11,8 +11,8 @@ tweet: "Custom #java doclet that generates #markdown javadoc."
 <br>
 
 [Marklet](https://github.com/Faylixe/marklet) is a custom **doclet** that
-generates a javadoc using markdown format, which can be then directly be pushed
-to your code repository on [GitHub](https://github.com) and be explored easily.
+generates a javadoc using markdown format, which can be then directly pushed
+to your code repository on [GitHub](https://github.com) and explored easily.
 Another great thing about such generated content format, is that your javadoc
 weight on disk is smaller and the generation process is faster than the standard
 doclet implementation. Usage and samples are available on the following
